# chromazen

./: .gitignore  AGENTS.md  Cargo.toml  README.md
assets/icons/: LICENSE
src/: app.rs  brush.rs  config.rs  constants.rs  gpu.rs  input.rs  lib.rs  macos_pressure.rs  main.rs  paint.rs  perf.rs  platform.rs  protocol.rs  renderer.rs  settings.rs  stroke_smoothing.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: controls.json
src-tauri/src/: desktop.rs  input_adapter.rs  main.rs  raw_event_plugin.rs
src/app/: command.rs  input.rs  menu.rs  settings.rs  ui.rs
src/app/ui/: color_picker.rs
src/config/: brush.rs
src/paint/: brush.rs  smoothing.rs
src/platform/: pressure.rs
src/renderer/: history.rs  layers.rs  resources.rs  stamps.rs  view.rs
src/renderer/shaders/: blit.wgsl  smudge.wgsl  stamp.wgsl
src/shaders/: blit.wgsl
ui/: README.md  package.json
ui/scripts/: build.mjs
ui/src/: index.html  main.js  styles.css
