[package]
name = "minipaint-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
egui = "0.34.1"
egui-wgpu = { version = "0.34.1", features = ["winit"] }
egui-winit = "0.34.1"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
pollster = "0.4"
wgpu = "29.0.3"
winit = "0.30.13"
