[package]
name = "chromazen"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "src-tauri"]
default-members = ["src-tauri"]
resolver = "2"

[dependencies]
atomic-write-file = "0.3.0"
bytemuck = { version = "1.16", features = ["derive"] }
directories = "6.0.0"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
wgpu = "29.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSView", "NSWindow", "block2"] }
raw-window-handle = "0.6.2"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.27.0"
